@@ -48,7 +48,7 @@ CYGBUILD_NAME="cygbuild"
 
 #  Automatically updated by the developer's editor on save
 
-CYGBUILD_VERSION="2014.0615.1313"
+CYGBUILD_VERSION="2014.0615.1315"
 
 #  Used by the 'cygsrc' command to download official Cygwin packages
 #  listed at http://cygwin.com/packages
@@ -11447,7 +11447,7 @@ function CygbuildCmdInstallList()
 
             local path="$instdir/$to"
 
-            ${test:+echo} mkdir ${verbose:+--verbose} "$path"
+            ${test:+echo} mkdir ${verbose:+--verbose} -p "$path"
 
             continue
 
